> - appended "UwU pwease wate us 5 staws" to the support ratings message

## <:happ:906683365791502366> bugs fixed

### <a:slash_command:1148866611227414568> </currency shop:1116857516324827148>
> - fixed a duplicate response when viewing an item from bunny and halo

### support ✨
> - fixed your roblox username sometimes not being automatically filled in (if your account was verified through <@426537812993638400>) when creating a ticket in https://discord.com/channels/977254354589462618/1072945802256855170 or https://discord.com/channels/977254354589462618/1082650454044979210
>  - in other words, <@983126054619189370> was updated to use the <@426537812993638400> v4 api

## <@490178047325110282>'s notes

### footnote
> - ..</currency events:1116857516324827148>? oh, next time..
>  - <a:foxsleep:701941646719451146>



------------
==============
==============
------------
16/oct/2023



# https://discord.com/channels/977254354589462618/987047618918105118 v`3.5.1`

## <:happ:906683365791502366> bugs fixed

### <a:slash_command:1148866611227414568> </modmail:1162483301215391916>
> - fixed command not responding when not used in dms/flooded area community

### stalk market 🥕
> - fixed incorrect next trend chances

### support ✨
> - fixed moderators who set no mentions for https://discord.com/channels/977254354589462618/1072945802256855170 being @mentioned for all tickets (as if they never set their mentions to begin with)



------------
==============
==============
------------
16/oct/2023



# https://discord.com/channels/977254354589462618/987047618918105118 v`3.5.2`

## <:happ:906683365791502366> stuff that changed

### stalk market 🥕
> - decreased all carrot sell prices slightly so that people will make less money overall on the stalk market
>  - don't worry - trends are still the same as before
>  - for example: `large-spike`'s max price was decreased from 200-350 to 110-150 (i don't know the exact figures)