@@ -99,73 +99,6 @@ export default async (interaction, firestore) => {
    };
 
 
-   // command contains automodded content (and i moderatable by the bot)
-   const autoModerationRules = await interaction.guild.autoModerationRules.fetch();
-   const keywordAutoModerationRules = autoModerationRules.filter(autoModerationRule => autoModerationRule.triggerType === Discord.AutoModerationRuleTriggerType.Keyword);
-
-   const keywords = keywordAutoModerationRules
-      .map(autoModerationRule => autoModerationRule.triggerMetadata.keywordFilter)
-      .flat();
-
-   const regexes = keywordAutoModerationRules
-      .map(autoModerationRule => autoModerationRule.triggerMetadata.regexPatterns)
-      .flat();
-
-   const contentAutomodded = (
-      keywords.some(keyword =>
-         keyword.startsWith(`*`) && keyword.endsWith(`*`)
-            ? new RegExp(`\b\w*${keyword.slice(1, -1)}\w*\b`, `gm`).test(command.toLowerCase())
-            : keyword.startsWith(`*`)
-               ? new RegExp(`\b${keyword.slice(1)}\w*`, `gm`).test(command.toLowerCase())
-               : keyword.endsWith(`*`)
-                  ? new RegExp(`\w*${keyword.slice(0, -1)}\b`, `gm`).test(command.toLowerCase())
-                  : command.toLowerCase().includes(keyword)
-      )
-      ||
-      regexes.some(regex =>
-         new RegExp(regex, `gi`).test(command.toLowerCase())
-      )
-   );
-
-   if (contentAutomodded && interaction.member.moderatable) {
-      // reply to the interaction
-      await interaction.reply({
-         content: toCommand(`${emojis.AutoMod} ${Discord.hyperlink(`Your command contains content which is blocked by this server.`, `https://support.discord.com/hc/en-us/articles/4421269296535-AutoMod-FAQ`)}`),
-         flags: [
-            Discord.MessageFlags.SuppressEmbeds
-         ],
-         allowedMentions: {
-            parse: []
-         },
-         ephemeral: true
-      });
-
-      // send to automod logs and time out user, if this is flooded area
-      if (interaction.guild.id === process.env.GUILD_FLOODED_AREA) {
-         await interaction.member.timeout(60 * 1000);
-
-         const channel = await interaction.guild.channels.fetch(process.env.FA_CHANNEL_AUTOMOD_LOGS);
-         await channel.send({
-            content: `${emojis.AutoMod} ${interaction.client.user} has blocked a command in ${interaction.channel}`,
-            embeds: [
-               new Discord.EmbedBuilder()
-                  .setColor(Discord.Colors.Blurple)
-                  .setAuthor({
-                     iconURL: interaction.user.displayAvatarURL(),
-                     name: interaction.user.discriminator === `0`
-                        ? `@${interaction.user.username}`
-                        : `@${interaction.user.username}#${interaction.user.discriminator}`
-                  })
-                  .setDescription(`${emojis.area_communities_bot} ${Discord.chatInputApplicationCommandMention(interaction.commandName, interaction.commandId)} ${command}`)
-            ]
-         });
-      };
-
-      // stop here
-      return;
-   };
-
-
    // run command
    switch (commandName) {
 
